# vibe-kanban

./: .code-workspace.code-workspace  Cargo.toml  STYLE_OVERRIDE.md  fix-vscode-cargo.ps1  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/instructions/: main.instructions.md
assets/scripts/: fix-cargo-path.ps1
crates/db/migrations/: 20250823090000_create_orchestrator_scaffold.sql  20250823090100_create_phases.sql  20250823090110_create_project_context_files.sql  20250823090120_create_task_context_files.sql  20250823090130_create_attempt_artifacts.sql  20250823090140_add_attempt_telemetry_fields.sql  20250823090200_add_unique_project_ctx_hash.sql  20250823090210_add_unique_task_ctx_hash.sql  20250823120000_alter_phases_add_fields.sql  20250823123000_uniq_phase_id.sql
crates/executors/: default_profiles.json
crates/executors/src/: profile.rs
crates/executors/src/executors/: amp.rs  claude.rs  codex.rs  cursor.rs
crates/local-deployment/: Cargo.toml
crates/local-deployment/src/: container.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: apply.rs  artifacts.rs  lib.rs  patch.rs  prompt.rs  run.rs  test.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/services/: Cargo.toml
crates/validators/: Cargo.toml
crates/validators/src/: api_stability.rs  determinism.rs  kpi.rs  lib.rs  scope_guard.rs
frontend/src/lib/: responsive-config.ts
frontend/src/pages/: project-tasks.tsx
scripts/: ensure-cargo.ps1
shared/prompts/: README.md
shared/prompts/v1/: orchestrator_system.txt
(+24 files in other folders)
