[package]
name = "orchestrator"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
utils = { path = "../utils" }
validators = { path = "../validators" }
tokio = { workspace = true }
***
